--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
 				"@babel/runtime": "^7.4.5",
 				"@fortawesome/fontawesome-free": "^5.8.2",
 				"@tweenjs/tween.js": "^17.4.0",
-				"axios": "^0.18.0",
+				"axios": "^0.19.0",
 				"axios-cache-plugin": "^0.1.0",
 				"clipboard": "^2.0.4",
 				"core-js": "^3.1.3",
@@ -27,6 +27,7 @@
 				"html2canvas": "^1.0.0-rc.3",
 				"jqwidgets-scripts": "^7.2.0",
 				"js-cookie": "^2.2.0",
+				"lodash": ">=4.17.13",
 				"lodash.debounce": "^4.0.8",
 				"mini-css-extract-plugin": "^0.5.0",
 				"net": "^1.0.2",
@@ -83,6 +84,7 @@
 				"eslint": "^5.16.0",
 				"eslint-config-standard": "^12.0.0",
 				"eslint-friendly-formatter": "^4.0.1",
+				"extend": ">=3.0.2",
 				"eslint-loader": "^2.1.2",
 				"eslint-plugin-html": "^5.0.5",
 				"eslint-plugin-promise": "^4.1.1",
