--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
 				"split.js": "^1.5.10",
 				"svg.js": "^2.7.1",
 				"tls": "0.0.1",
+				"v-clipboard": "^2.2.2",
 				"v-hotkey": "^0.3.1",
 				"v-tooltip": "^2.0.2",
 				"vue": "^2.6.10",
