--- a/services/composer.json
+++ b/services/composer.json
@@ -2,11 +2,12 @@
 	"config": {
 		"platform": {
 			"php": "7.1.0"
-		}
+		},
+		"apcu-autoloader":  true
 	},
-	"name": "fabpot/silex-skeleton",
-	"description": "A pre-configured skeleton for the Silex microframework",
-	"license": "MIT",
+	"name": "poblaciones/services",
+	"description": "Plataforma abierta de datos espaciales de población",
+	"license": "GNU GLP v3",
 	"type": "project",
 	"require": {
 		"php": ">=7.1.0",
@@ -27,25 +28,23 @@
 		"symfony/translation": "~2.8|^3.0",
 		"symfony/twig-bridge": "~2.8|^3.0",
 		"symfony/validator": "~2.8|^3.0",
-		"doctrine/dbal": "^2.9.2",
 		"phayes/geophp": "dev-master",
 		"mobiledetect/mobiledetectlib": "^2.8",
-		"geoip/geoip": "^1.17",
 		"sendgrid/sendgrid": "^7.0",
 		"defuse/php-encryption": "^2.2",
 		"phpmailer/phpmailer": "^6.0",
 		"rodrigoq/phpmailersendgrid": "^1.0",
 		"geoip2/geoip2": "^2.9",
+		"doctrine/dbal": "^2.9.2",
 		"doctrine/orm": "^2.6.3",
+		"doctrine/annotations": "^1.4",
 		"creof/doctrine2-spatial": "^1.2",
 		"jms/serializer": "^1.12",
 		"symfony/serializer": "^3.4",
 		"symfony/property-info": "^3.4",
-		"doctrine/annotations": "^1.4",
 		"jms/metadata": "^1.6",
 		"indigophp/doctrine-annotation-autoload": "^0.1.0",
 		"lusitanian/oauth": "^0.8.11",
-		"mjaschen/phpgeo": "^2.1",
 		"gasparesganga/php-shapefile": "^3.1",
 		"mpdf/mpdf": "^8.0"
 	},
