--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
 				"vue-multiselect": "^2.1.6",
 				"vue-resize-directive": "^1.2.0",
 				"vue-router": "^3.1.3",
+				"vue-scrollto": "^2.17.1",
 				"vue-sidebar-menu": "^3.12.2",
 				"vue-sortable": "^0.1.3",
 				"vue-splitpane": "^1.0.6",
