--- a/services/composer.json
+++ b/services/composer.json
@@ -46,7 +46,8 @@
 		"indigophp/doctrine-annotation-autoload": "^0.1.0",
 		"lusitanian/oauth": "^0.8.11",
 		"gasparesganga/php-shapefile": "^3.1",
-		"mpdf/mpdf": "^8.0"
+		"mpdf/mpdf": "^8.0",
+		"phpoffice/phpspreadsheet": "^1.11"
 	},
 	"autoload": {
 		"psr-0": {
