Mejoras para crawling segmentado. Listado de regiones. Fix a pérdida de extents al re-publicar.

--- a/services/phpstan.neon
+++ b/services/phpstan.neon
@@ -16,6 +16,7 @@ parameters:
 		- '#Return typehint of method .* has invalid type helena\\entities\\backoffice\\geometry.#'
 		- '#Return typehint of method .* has invalid type helena\\entities\\backoffice\\point.#'
 		- '#filename of function imagejpeg expects string|null, resource|false given.#'
+		- '#Function time_elapsed not found.#'
 		- '#Function vd not found.*#'
 		- '#Function pr not found.*#'
 		- '#Function ec not found.*#'
