--- a/services/composer.json
+++ b/services/composer.json
@@ -47,7 +47,8 @@
 		"lusitanian/oauth": "^0.8.11",
 		"gasparesganga/php-shapefile": "^3.1",
 		"mpdf/mpdf": "^8.0",
-		"phpoffice/phpspreadsheet": "^1.11"
+		"phpoffice/phpspreadsheet": "^1.11",
+		"phpstan/phpstan": "^0.12.18"
 	},
 	"autoload": {
 		"psr-0": {
