--- a/services/composer.json
+++ b/services/composer.json
@@ -47,8 +47,7 @@
 		"lusitanian/oauth": "^0.8.11",
 		"gasparesganga/php-shapefile": "^3.1",
 		"mpdf/mpdf": "^8.0",
-		"phpoffice/phpspreadsheet": "^1.11",
-		"phpstan/phpstan": "^0.12.18"
+		"phpoffice/phpspreadsheet": "^1.11"
 	},
 	"autoload": {
 		"psr-0": {
@@ -72,5 +71,6 @@
 		]
 	},
 	"require-dev": {
+		"phpstan/phpstan": "^0.12.19"
 	}
 }
