--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
 				"@fortawesome/fontawesome-free": "^5.8.2",
 				"@tweenjs/tween.js": "^17.4.0",
 				"axios": "^0.19.0",
+				"caniuse-lite": "^1.0.30001045",
 				"clipboard": "^2.0.4",
 				"core-js": "^3.1.3",
 				"dropzone": "^5.5.1",
