--- a/services/composer.json
+++ b/services/composer.json
@@ -71,6 +71,7 @@
 		]
 	},
 	"require-dev": {
-		"phpstan/phpstan": "^0.12.19"
+		"phpstan/phpstan": "^0.12.19",
+		"phpunit/phpunit": "^7.5"
 	}
 }
