zoom suavizado. parametrización de server secundario de geographies. tests desde cTest. Fix a ubicación de tooltips para markers. Fix a parametrización de UseGradients. Remove de UsePanels.

--- a/services/phpstan.neon
+++ b/services/phpstan.neon
@@ -9,6 +9,7 @@ parameters:
 		- doctrine_proxies
 		- web/phpinfo2.php
 		- web/index.php
+		- web/b.php
 		- tests/routesTest.php
 	autoload_files:
 		- vendor/autoload.php
