Agrego configuración a tests.

--- a/services/.gitignore
+++ b/services/.gitignore
@@ -1,19 +1,20 @@
-/bin
+/*.bat
+/*.txt
 /Properties
-/config/settings.php
+/bin
 /compilation_cache
+/compile.*
+/config/settings.php
 /doctrine_proxies
 /obj
 /serializer_cache
-/storage
 /src/storage
+/src/tests/config/customSettings.php
+/storage
 /var
 /vendor
-/web/phpMyAdmin
 /web.config
-/web/web.config
+/web/phpMyAdmin
 /web/test*.php
-/compile.*
-/*.bat
-/*.txt
+/web/web.config
 web.*.config
