--- a/services/config/settings.php.sample
+++ b/services/config/settings.php.sample
@@ -9,11 +9,13 @@ use minga\framework\settings\MailSettings;
 App::SetDebug(true);
 
 // **** Servidores
-Context::Settings()->Servers()->RegisterServers("http://servidor.poblaciones.org", "http://poblaciones.org");
+Context::Settings()->Servers()->RegisterServers("http://mapa.institucional.org", "http://institucional.org");
 
 // **** Opcionales
 // Context::Settings()->Map()->UseTileBlocks = false;
 // Context::Settings()->Map()->UseGradients = false;
+// Context::Settings()->Log()->LogMemoryPeaks = true;
+// Context::Settings()->Log()->MemoryPeakMB = 100;
 
 
 // **** Keys de terceros
