--- a/services/phpstan.neon
+++ b/services/phpstan.neon
@@ -2,6 +2,8 @@ includes:
 	- src/framework/phpstan.neon
 
 parameters:
+	reportUnmatchedIgnoredErrors:
+		false
 	excludes_analyse:
 		- vendor
 		- routes
