--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
 				"html2canvas": "^1.0.0-rc.3",
 				"jqwidgets-scripts": "^9.1.6",
 				"js-cookie": "^2.2.0",
+				"linkifyjs": "^2.1.9",
 				"lodash": ">=4.17.13",
 				"lodash.debounce": "^4.0.8",
 				"mini-css-extract-plugin": "^0.5.0",
