Corte por urbanidad. Exportación PNG y PDF mejorada. Intituciones con logo y color primario. Mejora mobile. Embebido de mapas. Bugfixes.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,10 +35,12 @@
 				"html2canvas": "^1.0.0-rc.3",
 				"jqwidgets-scripts": "^9.1.6",
 				"js-cookie": "^2.2.0",
+				"jspdf": "^1.5.3",
 				"linkifyjs": "^2.1.9",
 				"lodash": ">=4.17.13",
 				"lodash.debounce": "^4.0.8",
 				"mini-css-extract-plugin": "^0.5.0",
+				"vue-mobile-detection": "^1.0.0",
 				"net": "^1.0.2",
 				"normalize.css": "^8.0.1",
 				"nprogress": "^0.2.0",
