--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
 				"axios": "^0.19.0",
 				"caniuse-lite": "^1.0.30001048",
 				"clipboard": "^2.0.4",
+				"colorbrewer": "^1.3.0",
 				"core-js": "^3.1.3",
 				"dropzone": "^5.5.1",
 				"eslint": "^6.8.0",
@@ -91,7 +92,7 @@
 				"babel-preset-stage-2": "^7.0.0-beta.3",
 				"chalk": "^2.4.2",
 				"connect-history-api-fallback": "^1.6.0",
-				"copy-webpack-plugin": "^4.6.0",
+				"copy-webpack-plugin": "^6.0.3",
 				"css-loader": "^2.1.1",
 				"cssnano": "^4.1.10",
 				"eventsource-polyfill": "^0.9.6",
@@ -113,10 +114,11 @@
 				"rimraf": "^2.6.3",
 				"sass-loader": "^8.0.2",
 				"semver": "^5.7.0",
+				"serialize-javascript": "^4.0.0",
 				"serviceworker-webpack-plugin": "^1.0.1",
 				"shelljs": "^0.8.3",
 				"svg-sprite-loader": "^4.1.6",
-				"uglifyjs-webpack-plugin": "^2.2.0",
+				"terser-webpack-plugin": "^4.1.0",
 				"url-loader": "^1.1.2",
 				"vue-loader": "^15.8.3",
 				"vue-style-loader": "^4.1.2",
