--- a/services/composer.json
+++ b/services/composer.json
@@ -33,7 +33,6 @@
 		"sendgrid/sendgrid": "^7.0",
 		"defuse/php-encryption": "^2.2",
 		"phpmailer/phpmailer": "^6.0",
-		"rodrigoq/phpmailersendgrid": "^1.0",
 		"geoip2/geoip2": "^2.9",
 		"doctrine/dbal": "^2.9.2",
 		"doctrine/orm": "^2.7.2",
@@ -48,7 +47,8 @@
 		"gasparesganga/php-shapefile": "^3.1",
 		"mpdf/mpdf": "^8.0",
 		"phpoffice/phpspreadsheet": "^1.12",
-		"box/spout": "^3.1"
+		"box/spout": "^3.1",
+		"rodrigoq/phpmailersendgrid": "^1.0"
 	},
 	"autoload": {
 		"psr-0": {
