--- a/services/config/settings.php.sample
+++ b/services/config/settings.php.sample
@@ -17,6 +17,8 @@ Context::Settings()->Servers()->RegisterServers("http://mapa.institucional.org",
 // Context::Settings()->Log()->LogMemoryPeaks = true;
 // Context::Settings()->Log()->MemoryPeakMB = 100;
 
+// Context::Settings()->Map()->LoopLocalPort = 8000;
+
 
 // **** Keys de terceros
 Context::Settings()->Keys()->GoogleMapsKey = "GOOGLE_MAPS_KEY";
