--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,12 +57,12 @@
 				"vue": "^2.6.10",
 				"vue-clickaway": "^2.2.2",
 				"vue-color": "^2.7.0",
-				"vue-fab": "^2.3.1",
 				"vue-material": "1.0.0-beta-10.2",
 				"vue-material-design-icons": "^4.4.0",
 				"vue-mobile-detection": "^1.0.0",
 				"vue-multiselect": "^2.1.6",
 				"vue-resize-directive": "^1.2.0",
+				"vue-ripple-directive": "^2.0.1",
 				"vue-router": "^3.1.3",
 				"vue-scrollto": "^2.17.1",
 				"vue-sidebar-menu": "^3.12.2",
