--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,32 +13,32 @@
 				"lint": "eslint --ext .js,.vue src"
 		},
 		"dependencies": {
-				"@babel/runtime": "^7.4.5",
-				"@fortawesome/fontawesome-free": "^5.8.2",
-				"@tweenjs/tween.js": "^17.4.0",
-				"axios": "^0.19.0",
-				"caniuse-lite": "^1.0.30001048",
+				"@babel/runtime": "^7.12.5",
+				"@fortawesome/fontawesome-free": "^5.15.1",
+				"@tweenjs/tween.js": "^17.6.0",
+				"axios": "^0.21.1",
+				"caniuse-lite": "^1.0.30001173",
 				"clipboard": "^2.0.4",
 				"colorbrewer": "^1.3.0",
-				"core-js": "^3.1.3",
-				"dropzone": "^5.5.1",
+				"core-js": "^3.8.2",
+				"dropzone": "^5.7.2",
 				"eslint": "^6.8.0",
 				"eslint-config-standard": "^14.1.1",
 				"eslint-friendly-formatter": "^4.0.1",
 				"eslint-loader": "^4.0.2",
-				"eslint-plugin-html": "^6.0.2",
-				"eslint-plugin-import": "^2.20.2",
+				"eslint-plugin-html": "^6.1.1",
+				"eslint-plugin-import": "^2.22.1",
 				"eslint-plugin-node": "^11.1.0",
 				"eslint-plugin-promise": "^4.2.1",
-				"eslint-plugin-standard": "^4.0.1",
+				"eslint-plugin-standard": "^4.1.0",
 				"eslint-plugin-vue": "^6.2.2",
 				"geojson2svg": "^1.2.3",
-				"html2canvas": "^1.0.0-rc.5",
+				"html2canvas": "^1.0.0-rc.7",
 				"jqwidgets-scripts": "^9.1.6",
 				"js-cookie": "^2.2.0",
 				"jspdf": "^1.5.3",
 				"linkifyjs": "^2.1.9",
-				"lodash": ">=4.17.19",
+				"lodash": "^4.17.20",
 				"lodash.debounce": "^4.0.8",
 				"mini-css-extract-plugin": "^0.5.0",
 				"net": "^1.0.2",
@@ -48,51 +48,51 @@
 				"replace": "^1.1.0",
 				"screenfull": "^4.2.0",
 				"showdown": "^1.9.1",
-				"split.js": "^1.5.10",
+				"split.js": "^1.6.2",
 				"svg.js": "^2.7.1",
 				"tls": "0.0.1",
 				"v-clipboard": "^2.2.2",
 				"v-hotkey": "^0.3.1",
-				"v-tooltip": "^2.0.2",
-				"vue": "^2.6.10",
+				"v-tooltip": "^2.1.2",
+				"vue": "^2.6.12",
 				"vue-clickaway": "^2.2.2",
-				"vue-color": "^2.7.0",
+				"vue-color": "^2.8.1",
 				"vue-material": "1.0.0-beta-10.2",
-				"vue-material-design-icons": "^4.4.0",
+				"vue-material-design-icons": "^4.11.0",
 				"vue-mobile-detection": "^1.0.0",
 				"vue-multiselect": "^2.1.6",
 				"vue-resize-directive": "^1.2.0",
 				"vue-ripple-directive": "^2.0.1",
-				"vue-router": "^3.1.3",
-				"vue-scrollto": "^2.17.1",
+				"vue-router": "^3.4.9",
+				"vue-scrollto": "^2.20.0",
 				"vue-sidebar-menu": "^3.12.2",
 				"vue-sortable": "^0.1.3",
 				"vue-splitpane": "^1.0.6",
 				"vue2-dropzone": "^3.6.0",
-				"vuedraggable": "^2.23.2",
-				"vuex": "^3.1.2"
+				"vuedraggable": "^2.24.3",
+				"vuex": "^3.6.0"
 		},
 		"devDependencies": {
-				"@babel/core": "^7.4.5",
-				"@babel/plugin-proposal-class-properties": "^7.4.4",
-				"@babel/plugin-proposal-decorators": "^7.4.4",
-				"@babel/plugin-proposal-export-namespace-from": "^7.0.0",
-				"@babel/plugin-proposal-function-sent": "^7.0.0",
-				"@babel/plugin-proposal-json-strings": "^7.0.0",
-				"@babel/plugin-proposal-numeric-separator": "^7.0.0",
-				"@babel/plugin-proposal-throw-expressions": "^7.0.0",
+				"@babel/core": "^7.12.10",
+				"@babel/plugin-proposal-class-properties": "^7.12.1",
+				"@babel/plugin-proposal-decorators": "^7.12.12",
+				"@babel/plugin-proposal-export-namespace-from": "^7.12.1",
+				"@babel/plugin-proposal-function-sent": "^7.12.1",
+				"@babel/plugin-proposal-json-strings": "^7.12.1",
+				"@babel/plugin-proposal-numeric-separator": "^7.12.7",
+				"@babel/plugin-proposal-throw-expressions": "^7.12.1",
 				"@babel/plugin-syntax-dynamic-import": "^7.0.0",
-				"@babel/plugin-syntax-import-meta": "^7.0.0",
-				"@babel/plugin-transform-runtime": "^7.4.4",
-				"@babel/preset-env": "^7.4.5",
-				"@babel/register": "^7.4.4",
-				"autoprefixer": "^9.5.1",
+				"@babel/plugin-syntax-import-meta": "^7.10.4",
+				"@babel/plugin-transform-runtime": "^7.12.10",
+				"@babel/preset-env": "^7.12.11",
+				"@babel/register": "^7.12.10",
+				"autoprefixer": "^9.8.6",
 				"babel-eslint": "^10.0.1",
-				"babel-loader": "^8.0.6",
+				"babel-loader": "^8.2.2",
 				"babel-preset-stage-2": "^7.0.0-beta.3",
 				"chalk": "^2.4.2",
 				"connect-history-api-fallback": "^1.6.0",
-				"copy-webpack-plugin": "^6.0.3",
+				"copy-webpack-plugin": "^6.4.1",
 				"css-loader": "^2.1.1",
 				"cssnano": "^4.1.10",
 				"eventsource-polyfill": "^0.9.6",
@@ -100,14 +100,14 @@
 				"extend": ">=3.0.2",
 				"file-loader": "^3.0.1",
 				"friendly-errors-webpack-plugin": "^1.7.0",
-				"html-webpack-plugin": "^4.0.0-beta.5",
+				"html-webpack-plugin": "^4.5.1",
 				"http-proxy-middleware": "^0.19.1",
-				"nan": "^2.14.0",
+				"nan": "^2.14.2",
 				"node-sass": "^4.13.1",
 				"opn": "^5.5.0",
-				"optimize-css-assets-webpack-plugin": "^5.0.1",
+				"optimize-css-assets-webpack-plugin": "^5.0.4",
 				"ora": "^3.4.0",
-				"portfinder": "^1.0.20",
+				"portfinder": "^1.0.28",
 				"postcss-import": "^12.0.1",
 				"postcss-loader": "^3.0.0",
 				"postcss-url": "^8.0.0",
@@ -118,15 +118,15 @@
 				"serviceworker-webpack-plugin": "^1.0.1",
 				"shelljs": "^0.8.3",
 				"svg-sprite-loader": "^4.1.6",
-				"terser-webpack-plugin": "^4.1.0",
+				"terser-webpack-plugin": "^4.2.3",
 				"url-loader": "^1.1.2",
-				"vue-loader": "^15.8.3",
+				"vue-loader": "^15.9.6",
 				"vue-style-loader": "^4.1.2",
 				"vue-svg-loader": "^0.12.0",
-				"vue-template-compiler": "^2.6.11",
-				"webpack": "^4.41.5",
-				"webpack-bundle-analyzer": "^3.6.0",
-				"webpack-dev-middleware": "^3.7.2",
+				"vue-template-compiler": "^2.6.12",
+				"webpack": "^4.45.0",
+				"webpack-bundle-analyzer": "^3.9.0",
+				"webpack-dev-middleware": "^3.7.3",
 				"webpack-hot-middleware": "^2.25.0",
 				"webpack-merge": "^4.2.2"
 		},
