--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,77 +14,77 @@
 		},
 		"dependencies": {
 				"@babel/runtime": "^7.12.5",
-				"@fortawesome/fontawesome-free": "^5.15.1",
+				"@fortawesome/fontawesome-free": "^5.15.3",
 				"@tweenjs/tween.js": "^17.6.0",
 				"axios": "^0.21.1",
-				"caniuse-lite": "^1.0.30001174",
-				"clipboard": "^2.0.4",
-				"colorbrewer": "^1.3.0",
-				"core-js": "^3.8.2",
-				"dropzone": "^5.7.2",
+				"caniuse-lite": "^1.0.30001207",
+				"clipboard": "^2.0.8",
+				"colorbrewer": "^1.5.1",
+				"core-js": "^3.10.0",
+				"dropzone": "^5.9.2",
 				"eslint": "^6.8.0",
 				"eslint-config-standard": "^14.1.1",
 				"eslint-friendly-formatter": "^4.0.1",
 				"eslint-loader": "^4.0.2",
-				"eslint-plugin-html": "^6.1.1",
+				"eslint-plugin-html": "^6.1.2",
 				"eslint-plugin-import": "^2.22.1",
 				"eslint-plugin-node": "^11.1.0",
-				"eslint-plugin-promise": "^4.2.1",
+				"eslint-plugin-promise": "^4.3.1",
 				"eslint-plugin-standard": "^4.1.0",
 				"eslint-plugin-vue": "^6.2.2",
-				"geojson2svg": "^1.2.3",
+				"geojson2svg": "^1.2.5",
 				"html2canvas": "^1.0.0-rc.7",
 				"jqwidgets-scripts": "^9.1.6",
 				"js-cookie": "^2.2.0",
-				"jspdf": "^1.5.3",
+				"jspdf": "^2.3.1",
 				"linkifyjs": "^2.1.9",
-				"lodash": "^4.17.20",
+				"lodash": "^4.17.21",
 				"lodash.debounce": "^4.0.8",
 				"mini-css-extract-plugin": "^0.5.0",
 				"net": "^1.0.2",
 				"normalize.css": "^8.0.1",
 				"nprogress": "^0.2.0",
 				"parse-svg": "^0.0.0",
-				"replace": "^1.1.0",
+				"replace": "^1.2.1",
 				"screenfull": "^4.2.0",
 				"showdown": "^1.9.1",
-				"split.js": "^1.6.2",
+				"split.js": "^1.6.4",
 				"svg.js": "^2.7.1",
 				"tls": "0.0.1",
 				"v-clipboard": "^2.2.2",
 				"v-hotkey": "^0.3.1",
-				"v-tooltip": "^2.1.2",
+				"v-tooltip": "^2.1.3",
 				"vue": "^2.6.12",
 				"vue-clickaway": "^2.2.2",
 				"vue-color": "^2.8.1",
-				"vue-material": "1.0.0-beta-10.2",
+				"vue-material": "^1.0.0-beta-15",
 				"vue-material-design-icons": "^4.11.0",
 				"vue-mobile-detection": "^1.0.0",
 				"vue-multiselect": "^2.1.6",
 				"vue-resize-directive": "^1.2.0",
-				"vue-router": "^3.4.9",
+				"vue-router": "^3.5.1",
 				"vue-scrollto": "^2.20.0",
 				"vue-sidebar-menu": "^3.12.2",
 				"vue-sortable": "^0.1.3",
 				"vue-splitpane": "^1.0.6",
 				"vue2-dropzone": "^3.6.0",
 				"vuedraggable": "^2.24.3",
-				"vuex": "^3.6.0"
+				"vuex": "^3.6.2"
 		},
 		"devDependencies": {
 				"@babel/core": "^7.12.10",
 				"@babel/plugin-proposal-class-properties": "^7.12.1",
 				"@babel/plugin-proposal-decorators": "^7.12.12",
-				"@babel/plugin-proposal-export-namespace-from": "^7.12.1",
-				"@babel/plugin-proposal-function-sent": "^7.12.1",
-				"@babel/plugin-proposal-json-strings": "^7.12.1",
-				"@babel/plugin-proposal-numeric-separator": "^7.12.7",
-				"@babel/plugin-proposal-throw-expressions": "^7.12.1",
+				"@babel/plugin-proposal-export-namespace-from": "^7.12.13",
+				"@babel/plugin-proposal-function-sent": "^7.12.13",
+				"@babel/plugin-proposal-json-strings": "^7.13.8",
+				"@babel/plugin-proposal-numeric-separator": "^7.12.13",
+				"@babel/plugin-proposal-throw-expressions": "^7.12.13",
 				"@babel/plugin-syntax-dynamic-import": "^7.0.0",
 				"@babel/plugin-syntax-import-meta": "^7.10.4",
-				"@babel/plugin-transform-runtime": "^7.12.10",
+				"@babel/plugin-transform-runtime": "^7.13.10",
 				"@babel/preset-env": "^7.12.11",
-				"@babel/register": "^7.12.10",
+				"@babel/register": "^7.13.14",
 				"autoprefixer": "^9.8.6",
 				"babel-eslint": "^10.0.1",
 				"babel-loader": "^8.2.2",
@@ -99,7 +99,7 @@
 				"extend": ">=3.0.2",
 				"file-loader": "^3.0.1",
 				"friendly-errors-webpack-plugin": "^1.7.0",
-				"html-webpack-plugin": "^4.5.1",
+				"html-webpack-plugin": "^4.5.2",
 				"http-proxy-middleware": "^0.19.1",
 				"nan": "^2.14.2",
 				"node-sass": "^4.13.1",
@@ -120,7 +120,7 @@
 				"terser-webpack-plugin": "^4.2.3",
 				"url-loader": "^1.1.2",
 				"vue-loader": "^15.9.6",
-				"vue-style-loader": "^4.1.2",
+				"vue-style-loader": "^4.1.3",
 				"vue-svg-loader": "^0.12.0",
 				"vue-template-compiler": "^2.6.12",
 				"webpack": "^4.46.0",
