--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
 				"@tweenjs/tween.js": "^17.6.0",
 				"axios": "^0.21.1",
 				"caniuse-lite": "^1.0.30001207",
+				"canvg": "^3.0.7",
 				"clipboard": "^2.0.8",
 				"colorbrewer": "^1.5.1",
 				"core-js": "^3.10.0",
