--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
 				"axios": "^0.21.1",
 				"caniuse-lite": "^1.0.30001207",
 				"canvg": "^3.0.7",
+				"chokidar": "^3.5.1",
 				"clipboard": "^2.0.8",
 				"colorbrewer": "^1.5.1",
 				"core-js": "^3.10.0",
