--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
 				"canvg": "^3.0.7",
 				"chokidar": "^3.5.1",
 				"clipboard": "^2.0.8",
+				"color-convert": "^1.9.3",
 				"colorbrewer": "^1.5.1",
 				"core-js": "^3.10.0",
 				"dropzone": "^5.9.2",
@@ -97,7 +98,6 @@
 				"connect-history-api-fallback": "^1.6.0",
 				"copy-webpack-plugin": "^6.4.1",
 				"css-loader": "^2.1.1",
-				"cssnano": "^4.1.10",
 				"eventsource-polyfill": "^0.9.6",
 				"express": "^4.17.1",
 				"extend": ">=3.0.2",
