--- a/services/composer.json
+++ b/services/composer.json
@@ -35,7 +35,7 @@
 		"phpmailer/phpmailer": "^6.0",
 		"geoip2/geoip2": "^2.9",
 		"doctrine/dbal": "^2.9.2",
-		"doctrine/orm": "^2.7.2",
+		"doctrine/orm": "^2.9.2",
 		"doctrine/annotations": "^1.4",
 		"creof/doctrine2-spatial": "^1.2",
 		"jms/serializer": "^1.12",
@@ -48,7 +48,10 @@
 		"mpdf/mpdf": "^8.0.7",
 		"phpoffice/phpspreadsheet": "^1.12",
 		"box/spout": "^3.1",
-		"rodrigoq/phpmailersendgrid": "^1.0"
+		"rodrigoq/phpmailersendgrid": "^1.0",
+		"ezyang/htmlpurifier": "^4.13",
+		"simple-html-dom/simple-html-dom": "^1.5",
+		"symfony/cache": "^3.4"
 	},
 	"autoload": {
 		"psr-0": {
