--- a/frontend/package.json
+++ b/frontend/package.json
@@ -105,12 +105,14 @@
 				"file-loader": "^3.0.1",
 				"friendly-errors-webpack-plugin": "^1.7.0",
 				"html-webpack-plugin": "^4.5.2",
+				"http-proxy": "^1.18.1",
 				"http-proxy-middleware": "^0.19.1",
 				"nan": "^2.14.2",
 				"node-sass": "^4.13.1",
 				"opn": "^5.5.0",
 				"optimize-css-assets-webpack-plugin": "^5.0.4",
 				"ora": "^3.4.0",
+				"php-server": "^0.2.1",
 				"portfinder": "^1.0.28",
 				"postcss-import": "^12.0.1",
 				"postcss-loader": "^3.0.0",
