--- a/services/config/settings.php.sample
+++ b/services/config/settings.php.sample
@@ -12,8 +12,8 @@ App::SetDebug(true);
 Context::Settings()->Servers()->RegisterServers("http://mapa.institucional.org", "http://institucional.org");
 
 // **** Opcionales
-// Context::Settings()->Map()->UseTileBlocks = false;
-// Context::Settings()->Map()->UseGradients = false;
+// App::Settings()->Map()->UseTileBlocks = false;
+// App::Settings()->Map()->UseGradients = false;
 // Context::Settings()->Log()->LogMemoryPeaks = true;
 // Context::Settings()->Log()->MemoryPeakMB = 100;
 
