toma series desde el primer valor positivo para gráfico

--- a/services/phpstan.neon
+++ b/services/phpstan.neon
@@ -19,6 +19,7 @@ parameters:
 		- '#Function vd not found.#'
 		- '#Function pr not found.#'
 		- '#Function ec not found.#'
+		- '#of class Symfony\\Component\\Serializer\\Normalizer\\DateTimeNormalizer#'
 		- '#on an unknown class simple_html_dom#'
 		- '#simple_html_dom not found#'
 		- '#Parameter .* has invalid typehint type helena\\entities\\backoffice\\geometry.#'
