--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,8 @@
 				"@fortawesome/fontawesome-free": "^5.15.3",
 				"@googlemaps/markerclustererplus": "^1.1.2",
 				"@tweenjs/tween.js": "^17.6.0",
-				"axios": "^0.21.1",
+				"axios": "^0.21.4",
 				"canvg": "^3.0.7",
-				"chokidar": "^3.5.1",
 				"clipboard": "^2.0.8",
 				"color-convert": "^1.9.3",
 				"colorbrewer": "^1.5.1",
@@ -35,6 +34,7 @@
 				"eslint-plugin-promise": "^4.3.1",
 				"eslint-plugin-standard": "^4.1.0",
 				"eslint-plugin-vue": "^6.2.2",
+				"form-data": "^4.0.0",
 				"geojson2svg": "^1.2.5",
 				"html2canvas": "^1.0.0-rc.7",
 				"is-obj": "^3.0.0",
@@ -95,6 +95,7 @@
 				"babel-loader": "^8.2.2",
 				"babel-preset-stage-2": "^7.0.0-beta.3",
 				"chalk": "^2.4.2",
+				"chokidar": "^3.5.3",
 				"connect-history-api-fallback": "^1.6.0",
 				"copy-webpack-plugin": "^6.4.1",
 				"css-loader": "^2.1.1",
@@ -107,7 +108,6 @@
 				"http-proxy": "^1.18.1",
 				"http-proxy-middleware": "^0.19.1",
 				"nan": "^2.14.2",
-				"node-sass": "^4.13.1",
 				"opn": "^5.5.0",
 				"optimize-css-assets-webpack-plugin": "^5.0.4",
 				"ora": "^3.4.0",
@@ -117,11 +117,12 @@
 				"postcss-loader": "^3.0.0",
 				"postcss-url": "^8.0.0",
 				"rimraf": "^2.6.3",
+				"sass": "^1.49.11",
 				"sass-loader": "^8.0.2",
 				"semver": "^5.7.0",
 				"serialize-javascript": "^4.0.0",
 				"serviceworker-webpack-plugin": "^1.0.1",
-				"shelljs": "^0.8.3",
+				"shelljs": "^0.8.5",
 				"svg-sprite-loader": "^4.1.6",
 				"terser-webpack-plugin": "^4.2.3",
 				"url-loader": "^1.1.2",
@@ -132,7 +133,7 @@
 				"webpack": "^4.46.0",
 				"webpack-bundle-analyzer": "^3.9.0",
 				"webpack-dev-middleware": "^3.7.3",
-				"webpack-hot-middleware": "^2.25.0",
+				"webpack-hot-middleware": "^2.25.1",
 				"webpack-merge": "^4.2.2"
 		},
 		"engines": {
