--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,150 +1,151 @@
 {
-		"name": "poblaciones",
-		"version": "1.0.0",
-		"description": "Poblaciones Frontend",
-		"author": "Pablo De Grande <pablodg@gmail.com>",
-		"private": true,
-		"scripts": {
-				"dev": "node build/dev-server.js",
-				"start": "node build/dev-server.js",
-				"build": "node build/build.js",
-				"upload": "node build/upload.js",
-				"beta": "node build/beta.js",
-				"lint": "eslint --ext .js,.vue src"
-		},
-		"dependencies": {
-				"@babel/runtime": "^7.12.5",
-				"@fortawesome/fontawesome-free": "^5.15.3",
-				"@googlemaps/markerclustererplus": "^1.1.2",
-				"@tweenjs/tween.js": "^17.6.0",
-				"axios": "^0.21.4",
-				"canvg": "^3.0.7",
-				"clipboard": "^2.0.8",
-				"color-convert": "^1.9.3",
-				"colorbrewer": "^1.5.1",
-				"core-js": "^3.10.0",
-				"dropzone": "^5.9.2",
-				"eslint": "^6.8.0",
-				"eslint-config-standard": "^14.1.1",
-				"eslint-friendly-formatter": "^4.0.1",
-				"eslint-loader": "^4.0.2",
-				"eslint-plugin-html": "^6.1.2",
-				"eslint-plugin-import": "^2.22.1",
-				"eslint-plugin-node": "^11.1.0",
-				"eslint-plugin-promise": "^4.3.1",
-				"eslint-plugin-standard": "^4.1.0",
-				"eslint-plugin-vue": "^6.2.2",
-				"form-data": "^4.0.0",
-				"geojson2svg": "^1.2.5",
-				"html2canvas": "^1.0.0-rc.7",
-				"is-obj": "^3.0.0",
-				"jqwidgets-scripts": "^9.1.6",
-				"js-cookie": "^2.2.0",
-				"jspdf": "^2.3.1",
-				"leaflet": "^1.8.0",
-				"leaflet-draw": "^1.0.4",
-				"linkifyjs": "^2.1.9",
-				"lodash": "^4.17.21",
-				"lodash.debounce": "^4.0.8",
-				"mini-css-extract-plugin": "^0.5.0",
-				"moment": "^2.29.1",
-				"net": "^1.0.2",
-				"normalize.css": "^8.0.1",
-				"nprogress": "^0.2.0",
-				"parse-svg": "^0.0.0",
-				"replace": "^1.2.1",
-				"screenfull": "^4.2.0",
-				"showdown": "^1.9.1",
-				"split.js": "^1.6.4",
-				"svg.js": "^2.7.1",
-				"tls": "0.0.1",
-				"v-clipboard": "^2.2.2",
-				"v-hotkey": "^0.3.1",
-				"v-tooltip": "^2.1.3",
-				"vue": "^2.6.12",
-				"vue-clickaway": "^2.2.2",
-				"vue-color": "^2.8.1",
-				"vue-material": "^1.0.0-beta-15",
-				"vue-material-design-icons": "^4.11.0",
-				"vue-mobile-detection": "^1.0.0",
-				"vue-multiselect": "^2.1.6",
-				"vue-resize-directive": "^1.2.0",
-				"vue-router": "^3.5.1",
-				"vue-scrollto": "^2.20.0",
-				"vue-sidebar-menu": "^3.12.2",
-				"vue-sortable": "^0.1.3",
-				"vue-splitpane": "^1.0.6",
-				"vue2-dropzone": "^3.6.0",
-				"vuedraggable": "^2.24.3",
-				"vuex": "^3.6.2"
-		},
-		"devDependencies": {
-				"@babel/core": "^7.12.10",
-				"@babel/plugin-proposal-class-properties": "^7.12.1",
-				"@babel/plugin-proposal-decorators": "^7.12.12",
-				"@babel/plugin-proposal-export-namespace-from": "^7.12.13",
-				"@babel/plugin-proposal-function-sent": "^7.12.13",
-				"@babel/plugin-proposal-json-strings": "^7.13.8",
-				"@babel/plugin-proposal-numeric-separator": "^7.12.13",
-				"@babel/plugin-proposal-throw-expressions": "^7.12.13",
-				"@babel/plugin-syntax-dynamic-import": "^7.0.0",
-				"@babel/plugin-syntax-import-meta": "^7.10.4",
-				"@babel/plugin-transform-runtime": "^7.13.10",
-				"@babel/preset-env": "^7.12.11",
-				"@babel/register": "^7.13.14",
-				"autoprefixer": "^9.8.6",
-				"babel-eslint": "^10.0.1",
-				"babel-loader": "^8.2.2",
-				"babel-preset-stage-2": "^7.0.0-beta.3",
-				"chalk": "^2.4.2",
-				"chokidar": "^3.5.3",
-				"connect-history-api-fallback": "^1.6.0",
-				"copy-webpack-plugin": "^6.4.1",
-				"css-loader": "^2.1.1",
-				"eventsource-polyfill": "^0.9.6",
-				"express": "^4.17.1",
-				"extend": ">=3.0.2",
-				"file-loader": "^3.0.1",
-				"friendly-errors-webpack-plugin": "^1.7.0",
-				"html-webpack-plugin": "^4.5.2",
-				"http-proxy": "^1.18.1",
-				"http-proxy-middleware": "^0.19.1",
-				"nan": "^2.14.2",
-				"opn": "^5.5.0",
-				"optimize-css-assets-webpack-plugin": "^5.0.4",
-				"ora": "^3.4.0",
-				"php-server": "^0.2.1",
-				"portfinder": "^1.0.28",
-				"postcss-import": "^12.0.1",
-				"postcss-loader": "^3.0.0",
-				"postcss-url": "^8.0.0",
-				"rimraf": "^2.6.3",
-				"sass": "^1.53.0",
-				"sass-loader": "^8.0.2",
-				"semver": "^5.7.0",
-				"serialize-javascript": "^4.0.0",
-				"serviceworker-webpack-plugin": "^1.0.1",
-				"shelljs": "^0.8.5",
-				"svg-sprite-loader": "^4.1.6",
-				"terser-webpack-plugin": "^4.2.3",
-				"url-loader": "^1.1.2",
-				"vue-loader": "^15.9.6",
-				"vue-style-loader": "^4.1.3",
-				"vue-svg-loader": "^0.12.0",
-				"vue-template-compiler": "^2.6.12",
-				"webpack": "^4.46.0",
-				"webpack-bundle-analyzer": "^3.9.0",
-				"webpack-dev-middleware": "^3.7.3",
-				"webpack-hot-middleware": "^2.25.1",
-				"webpack-merge": "^4.2.2"
-		},
-		"engines": {
-				"node": ">= 4.0.0",
-				"npm": ">= 3.0.0"
-		},
-		"browserslist": [
-				"> 1%",
-				"last 2 versions",
-				"not ie <= 8"
-		]
+	"name": "poblaciones",
+	"version": "1.0.0",
+	"description": "Poblaciones Frontend",
+	"author": "Pablo De Grande <pablodg@gmail.com>",
+	"private": true,
+	"scripts": {
+		"dev": "node build/dev-server.js",
+		"start": "node build/dev-server.js",
+		"build": "node build/build.js",
+		"upload": "node build/upload.js",
+		"beta": "node build/beta.js",
+		"lint": "eslint --ext .js,.vue src"
+	},
+	"dependencies": {
+		"@babel/runtime": "^7.12.5",
+		"@fortawesome/fontawesome-free": "^5.15.3",
+		"@googlemaps/markerclustererplus": "^1.1.2",
+		"@tweenjs/tween.js": "^17.6.0",
+		"axios": "^0.21.4",
+		"canvg": "^3.0.7",
+		"clipboard": "^2.0.8",
+		"color-convert": "^1.9.3",
+		"colorbrewer": "^1.5.1",
+		"core-js": "^3.10.0",
+		"deck.gl": "^8.8.9",
+		"dropzone": "^5.9.2",
+		"eslint": "^6.8.0",
+		"eslint-config-standard": "^14.1.1",
+		"eslint-friendly-formatter": "^4.0.1",
+		"eslint-loader": "^4.0.2",
+		"eslint-plugin-html": "^6.1.2",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-promise": "^4.3.1",
+		"eslint-plugin-standard": "^4.1.0",
+		"eslint-plugin-vue": "^6.2.2",
+		"form-data": "^4.0.0",
+		"geojson2svg": "^1.2.5",
+		"html2canvas": "^1.0.0-rc.7",
+		"is-obj": "^3.0.0",
+		"jqwidgets-scripts": "^9.1.6",
+		"js-cookie": "^2.2.0",
+		"jspdf": "^2.3.1",
+		"leaflet": "^1.8.0",
+		"leaflet-draw": "^1.0.4",
+		"linkifyjs": "^2.1.9",
+		"lodash": "^4.17.21",
+		"lodash.debounce": "^4.0.8",
+		"mini-css-extract-plugin": "^0.5.0",
+		"moment": "^2.29.1",
+		"net": "^1.0.2",
+		"normalize.css": "^8.0.1",
+		"nprogress": "^0.2.0",
+		"parse-svg": "^0.0.0",
+		"replace": "^1.2.1",
+		"screenfull": "^4.2.0",
+		"showdown": "^1.9.1",
+		"split.js": "^1.6.4",
+		"svg.js": "^2.7.1",
+		"tls": "0.0.1",
+		"v-clipboard": "^2.2.2",
+		"v-hotkey": "^0.3.1",
+		"v-tooltip": "^2.1.3",
+		"vue": "^2.6.12",
+		"vue-clickaway": "^2.2.2",
+		"vue-color": "^2.8.1",
+		"vue-material": "^1.0.0-beta-15",
+		"vue-material-design-icons": "^4.11.0",
+		"vue-mobile-detection": "^1.0.0",
+		"vue-multiselect": "^2.1.6",
+		"vue-resize-directive": "^1.2.0",
+		"vue-router": "^3.5.1",
+		"vue-scrollto": "^2.20.0",
+		"vue-sidebar-menu": "^3.12.2",
+		"vue-sortable": "^0.1.3",
+		"vue-splitpane": "^1.0.6",
+		"vue2-dropzone": "^3.6.0",
+		"vuedraggable": "^2.24.3",
+		"vuex": "^3.6.2"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.10",
+		"@babel/plugin-proposal-class-properties": "^7.12.1",
+		"@babel/plugin-proposal-decorators": "^7.12.12",
+		"@babel/plugin-proposal-export-namespace-from": "^7.12.13",
+		"@babel/plugin-proposal-function-sent": "^7.12.13",
+		"@babel/plugin-proposal-json-strings": "^7.13.8",
+		"@babel/plugin-proposal-numeric-separator": "^7.12.13",
+		"@babel/plugin-proposal-throw-expressions": "^7.12.13",
+		"@babel/plugin-syntax-dynamic-import": "^7.0.0",
+		"@babel/plugin-syntax-import-meta": "^7.10.4",
+		"@babel/plugin-transform-runtime": "^7.13.10",
+		"@babel/preset-env": "^7.12.11",
+		"@babel/register": "^7.13.14",
+		"autoprefixer": "^9.8.6",
+		"babel-eslint": "^10.0.1",
+		"babel-loader": "^8.2.2",
+		"babel-preset-stage-2": "^7.0.0-beta.3",
+		"chalk": "^2.4.2",
+		"chokidar": "^3.5.3",
+		"connect-history-api-fallback": "^1.6.0",
+		"copy-webpack-plugin": "^6.4.1",
+		"css-loader": "^2.1.1",
+		"eventsource-polyfill": "^0.9.6",
+		"express": "^4.17.1",
+		"extend": ">=3.0.2",
+		"file-loader": "^3.0.1",
+		"friendly-errors-webpack-plugin": "^1.7.0",
+		"html-webpack-plugin": "^4.5.2",
+		"http-proxy": "^1.18.1",
+		"http-proxy-middleware": "^0.19.1",
+		"nan": "^2.14.2",
+		"opn": "^5.5.0",
+		"optimize-css-assets-webpack-plugin": "^5.0.4",
+		"ora": "^3.4.0",
+		"php-server": "^0.2.1",
+		"portfinder": "^1.0.28",
+		"postcss-import": "^12.0.1",
+		"postcss-loader": "^3.0.0",
+		"postcss-url": "^8.0.0",
+		"rimraf": "^2.6.3",
+		"sass": "^1.53.0",
+		"sass-loader": "^8.0.2",
+		"semver": "^5.7.0",
+		"serialize-javascript": "^4.0.0",
+		"serviceworker-webpack-plugin": "^1.0.1",
+		"shelljs": "^0.8.5",
+		"svg-sprite-loader": "^4.1.6",
+		"terser-webpack-plugin": "^4.2.3",
+		"url-loader": "^1.1.2",
+		"vue-loader": "^15.9.6",
+		"vue-style-loader": "^4.1.3",
+		"vue-svg-loader": "^0.12.0",
+		"vue-template-compiler": "^2.6.12",
+		"webpack": "^4.46.0",
+		"webpack-bundle-analyzer": "^3.9.0",
+		"webpack-dev-middleware": "^3.7.3",
+		"webpack-hot-middleware": "^2.25.1",
+		"webpack-merge": "^4.2.2"
+	},
+	"engines": {
+		"node": ">= 4.0.0",
+		"npm": ">= 3.0.0"
+	},
+	"browserslist": [
+		"> 1%",
+		"last 2 versions",
+		"not ie <= 8"
+	]
 }
