--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,15 @@
 	},
 	"dependencies": {
 		"@babel/runtime": "^7.12.5",
+		"@ckeditor/ckeditor5-build-balloon": "^38.0.1",
+		"@ckeditor/ckeditor5-build-classic": "^38.0.1",
+		"@ckeditor/ckeditor5-vue2": "^3.0.1",
 		"@fortawesome/fontawesome-free": "^5.15.3",
 		"@googlemaps/markerclustererplus": "^1.1.2",
 		"@tweenjs/tween.js": "^17.6.0",
 		"axios": "^0.21.4",
 		"canvg": "^3.0.7",
+		"ckeditor5": "^38.0.1",
 		"clipboard": "^2.0.8",
 		"color-convert": "^1.9.3",
 		"colorbrewer": "^1.5.1",
@@ -79,6 +83,7 @@
 		"vue-splitpane": "^1.0.6",
 		"vue2-dropzone": "^3.6.0",
 		"vuedraggable": "^2.24.3",
+		"vuelidate": "^0.7.7",
 		"vuex": "^3.6.2",
 		"webpack": "^5.82.1"
 	},
@@ -116,7 +121,7 @@
 		"nan": "^2.14.2",
 		"opn": "^5.5.0",
 		"ora": "^3.4.0",
-		"php-server": "^0.2.1",
+		"php-server": "0.2.1",
 		"portfinder": "^1.0.28",
 		"postcss-import": "^12.0.1",
 		"postcss-loader": "^3.0.0",
@@ -134,10 +139,10 @@
 		"url-loader": "^4.1.1",
 		"vue-loader": "15.10.1",
 		"vue-style-loader": "^4.1.3",
-		"vue-svg-loader": "^0.12.0",
+		"vue-svg-loader": "^0.10.0",
 		"vue-template-compiler": "^2.6.12",
 		"webpack": "^5.82.1",
-		"webpack-bundle-analyzer": "^3.9.0",
+		"webpack-bundle-analyzer": "^4.8.0",
 		"webpack-dev-middleware": "^3.7.3",
 		"webpack-hot-middleware": "^2.25.1",
 		"webpack-merge": "^4.2.2"
