--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
 		"@googlemaps/markerclustererplus": "^1.1.2",
 		"@tweenjs/tween.js": "^17.6.0",
 		"axios": "^0.21.4",
+		"axios-progress-bar": "^1.2.0",
 		"canvg": "^3.0.7",
 		"ckeditor5": "^38.0.1",
 		"clipboard": "^2.0.8",
