--- a/frontend/package.json
+++ b/frontend/package.json
@@ -80,6 +80,7 @@
 		"vue-router": "^3.5.1",
 		"vue-scrollto": "^2.20.0",
 		"vue-sidebar-menu": "^3.12.2",
+		"vue-slider-component": "^3.2.24",
 		"vue-sortable": "^0.1.3",
 		"vue-splitpane": "^1.0.6",
 		"vue2-dropzone": "^3.6.0",
