--- a/services/composer.json
+++ b/services/composer.json
@@ -40,7 +40,6 @@
 		"doctrine/dbal": "^2.9.2",
 		"doctrine/orm": "^2.9.2",
 		"doctrine/annotations": "^1.4",
-		"creof/doctrine2-spatial": "^1.2",
 		"jms/serializer": "^1.12",
 		"symfony/serializer": "^3.4",
 		"symfony/property-info": "^3.4",
@@ -55,7 +54,8 @@
 		"ezyang/htmlpurifier": "^4.13",
 		"simple-html-dom/simple-html-dom": "^1.5",
 		"symfony/cache": "^3.4",
-		"proj4php/proj4php": "^2.0"
+		"proj4php/proj4php": "^2.0",
+		"alexandret/doctrine2-spatial": "^2.0"
 	},
 	"autoload": {
 		"psr-0": {
