--- a/frontend/package.json
+++ b/frontend/package.json
@@ -69,9 +69,11 @@
 		"v-hotkey": "^0.3.1",
 		"v-tooltip": "^2.1.3",
 		"vue": "^2.6.12",
+		"vue-clamp": "^0.4.1",
 		"vue-cli": "^2.9.6",
 		"vue-clickaway": "^2.2.2",
 		"vue-color": "^2.8.1",
+		"vue-fullscreen": "^2.6.1",
 		"vue-material": "^1.0.0-beta-15",
 		"vue-material-design-icons": "^5.2.0",
 		"vue-mobile-detection": "^1.0.0",
