--- a/frontend/package.json
+++ b/frontend/package.json
@@ -86,6 +86,7 @@
 		"vue-sortable": "^0.1.3",
 		"vue-splitpane": "^1.0.6",
 		"vue2-dropzone": "^3.6.0",
+		"vue2-touch-events": "^3.2.3",
 		"vuedraggable": "^2.24.3",
 		"vuelidate": "^0.7.7",
 		"vuex": "^3.6.2",
