--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "node build/dev-server.js",
+		"tran": "node build/tran-server.js",
 		"start": "node build/dev-server.js",
 		"build": "node build/build.js",
 		"upload": "node build/upload.js",
