--- a/frontend/package.json
+++ b/frontend/package.json
@@ -86,6 +86,7 @@
 		"vue-slider-component": "^3.2.24",
 		"vue-sortable": "^0.1.3",
 		"vue-splitpane": "^1.0.6",
+		"vue-switches": "^2.0.1",
 		"vue2-dropzone": "^3.6.0",
 		"vue2-touch-events": "^3.2.3",
 		"vuedraggable": "^2.24.3",
