--- a/frontend/package.json
+++ b/frontend/package.json
@@ -87,6 +87,7 @@
 		"vue-sortable": "^0.1.3",
 		"vue-splitpane": "^1.0.6",
 		"vue-switches": "^2.0.1",
+		"vue2-animate": "^2.1.4",
 		"vue2-dropzone": "^3.6.0",
 		"vue2-touch-events": "^3.2.3",
 		"vuedraggable": "^2.24.3",
