--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,12 @@
 		"@ckeditor/ckeditor5-build-balloon": "^38.0.1",
 		"@ckeditor/ckeditor5-build-classic": "^38.0.1",
 		"@ckeditor/ckeditor5-vue2": "^3.0.1",
+		"@deck.gl/core": "^9.1.8",
+		"@deck.gl/google-maps": "^9.1.8",
+		"@deck.gl/layers": "^9.1.8",
 		"@fortawesome/fontawesome-free": "^5.15.3",
 		"@googlemaps/markerclustererplus": "^1.1.2",
+		"@luma.gl/core": "^9.1.7",
 		"@tweenjs/tween.js": "^17.6.0",
 		"axios": "^0.21.4",
 		"axios-progress-bar": "^1.2.0",
@@ -29,7 +33,8 @@
 		"color-convert": "^1.9.3",
 		"colorbrewer": "^1.5.1",
 		"core-js": "^3.30.2",
-		"deck.gl": "^8.8.9",
+		"deck.gl": "^9.1.8",
+		"deck.gl-leaflet": "^1.3.1",
 		"dropzone": "^5.9.2",
 		"eslint": "^6.8.0",
 		"eslint-config-standard": "^14.1.1",
@@ -136,8 +141,8 @@
 		"postcss-url": "^8.0.0",
 		"resolve-url-loader": "^5.0.0",
 		"rimraf": "^2.6.3",
-		"sass": "^1.60.0",
-		"sass-loader": "^10.2.1",
+		"sass": "^1.32.0",
+		"sass-loader": "^13.0.0",
 		"semver": "^5.7.0",
 		"serialize-javascript": "^4.0.0",
 		"shelljs": "^0.8.5",
